--- a/src/FT/Sistema/views/layout.twig
+++ b/src/FT/Sistema/views/layout.twig
@@ -14,27 +14,15 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
-                <a class="brand" href="http://github.com/fabiotavares/silex" target="_blank" title="Ir para github">Fábio Tavares</a>
-                <div class="nav-collapse collapse">
-                    {% block opcoes %}{% endblock %}
-                </div>
+                <a class="brand" href="http://github.com/fabiotavares/doctrine" target="_blank" title="Ir para github">Fábio Tavares | Code.education | Doctrine | Fase 2 | Consultas com DQL</a>
+                {% block opcoes %}{% endblock %}
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <div class="hero-unit">
-            <h2>Code.education - Silex</h2>
-            <h2><small>Fase 3: CRUD com Twig</small></h2>
-        </div>
-
+    <div class="container" style="margin-top: 50px">
         <div class="page-header">
-            {% block titulo %}<h4>Cadastro de Produtos</h4>{% endblock %}
+            {% block titulo %}<h4>Sistema de busca para produtos</h4>{% endblock %}
         </div>
 
         {% block conteudo %}{% endblock %}
