Finalização do sistema de busca e atualização do banco de dados

--- a/src/FT/Sistema/views/produto_edit.twig
+++ b/src/FT/Sistema/views/produto_edit.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.twig' %}
 
 {% block opcoes %}
-    <a href="{{ path('produtos') }}" title="Retorna à lista de produtos" class="btn btn-success pull-right">Produtos</a>
+    <a href="{{ path('produtos') }}" title="Retorna à lista de produtos" class="btn btn-primary pull-right">Produtos</a>
 {% endblock %}
 
 {% block titulo %}<h4>Atualizando Produto</h4>{% endblock %}
