Finalizando sistema de busca e paginação

--- a/src/FT/Sistema/views/layout.twig
+++ b/src/FT/Sistema/views/layout.twig
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/css/style_table_order.css" rel="stylesheet">
+    <script type="text/javascript" src="/js/jquery-latest.js"></script>
+    <script type="text/javascript" src="/js/jquery.tablesorter.js"></script>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 </head>
 
@@ -28,7 +31,6 @@
         {% block conteudo %}{% endblock %}
     </div>
 
-
-<script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript"></script>
 </body>
 </html>
