--- a/src/FT/Sistema/views/produtos.twig
+++ b/src/FT/Sistema/views/produtos.twig
@@ -5,59 +5,63 @@
 {% endblock %}
 
 {% block conteudo %}
-        <form action="/produtos" method="post" class="form-horizontal">
+        <form action="/produtos" method="get" class="form-horizontal">
 
             <div class="control-group">
                 <label class="control-label" for="iid">Id:</label>
                 <div class="controls">
-                    <select name="tid" class="span2">
-                        <option value="qualquer" {% if parametros.tid == 'qualquer' %}selected{% endif %}>Qualquer</option>
-                        <option value="iguala" {% if parametros.tid == 'iguala' %}selected{% endif %}>Igual a</option>
-                        <option value="maiorque" {% if parametros.tid == 'maiorque' %}selected{% endif %}>Maior que</option>
-                        <option value="menorque" {% if parametros.tid == 'menorque' %}selected{% endif %}>Menor que</option>
+                    <select id="itid" name="tid" class="span2" onchange="mudouCriterio('itid', 'iid')">
+                        <option value="qq" {% if (parametros.tid is defined) and (parametros.tid == 'qq') %}selected{% endif %}>Qualquer</option>
+                        <option value="iga" {% if (parametros.tid is defined) and (parametros.tid == 'iga') %}selected{% endif %}>Igual a</option>
+                        <option value="maq" {% if (parametros.tid is defined) and (parametros.tid == 'maq') %}selected{% endif %}>Maior que</option>
+                        <option value="meq" {% if (parametros.tid is defined) and (parametros.tid == 'meq') %}selected{% endif %}>Menor que</option>
                     </select>
-                    <input type="number" class="span2" id="iid" name="id" min="0" step="1" placeholder="Id" value="{{ parametros.id }}">
+                    <input type="number" class="span2" id="iid" name="id" min="0" step="1" placeholder="Id"
+                           value="{% if parametros.id is defined %}{{ parametros.id }}{% endif %}">
                 </div>
             </div>
 
             <div class="control-group">
                 <label class="control-label" for="ivalor">Valor:</label>
                 <div class="controls">
-                    <select name="tvalor" class="span2">
-                        <option value="qualquer" {% if parametros.tvalor == 'qualquer' %}selected{% endif %}>Qualquer</option>
-                        <option value="iguala" {% if parametros.tvalor == 'iguala' %}selected{% endif %}>Igual a</option>
-                        <option value="maiorque" {% if parametros.tvalor == 'maiorque' %}selected{% endif %}>Maior que</option>
-                        <option value="menorque" {% if parametros.tvalor == 'menorque' %}selected{% endif %}>Menor que</option>
+                    <select id="itvalor" name="tvalor" class="span2" onchange="mudouCriterio('itvalor', 'ivalor')">
+                        <option value="qq" {% if (parametros.tvalor is defined) and (parametros.tvalor == 'qq') %}selected{% endif %}>Qualquer</option>
+                        <option value="iga" {% if (parametros.tvalor is defined) and (parametros.tvalor == 'iga') %}selected{% endif %}>Igual a</option>
+                        <option value="maq" {% if (parametros.tvalor is defined) and (parametros.tvalor == 'maq') %}selected{% endif %}>Maior que</option>
+                        <option value="meq" {% if (parametros.tvalor is defined) and (parametros.tvalor == 'meq') %}selected{% endif %}>Menor que</option>
                     </select>
-                    <input type="number" class="span2" id="ivalor" name="valor" min="0" step="0.01" placeholder="Valor" value="{{ parametros.valor }}">
+                    <input type="number" class="span2" id="ivalor" name="valor" min="0" step="0.01" placeholder="Valor"
+                           value="{% if parametros.valor is defined %}{{ parametros.valor }}{% endif %}">
                 </div>
             </div>
 
             <div class="control-group">
                 <label class="control-label" for="inome">Nome:</label>
                 <div class="controls">
-                    <select name="tnome" class="span2">
-                        <option value="qualquer" {% if parametros.tnome == 'qualquer' %}selected{% endif %}>Qualquer</option>
-                        <option value="iguala" {% if parametros.tnome == 'iguala' %}selected{% endif %}>Igual a</option>
-                        <option value="contem" {% if parametros.tnome == 'contem' %}selected{% endif %}>Contém</option>
-                        <option value="naocontem" {% if parametros.tnome == 'naocontem' %}selected{% endif %}>Não contém</option>
+                    <select id="itnome" name="tnome" class="span2" onchange="mudouCriterio('itnome', 'inome')">
+                        <option value="qq" {% if (parametros.tnome is defined) and (parametros.tnome == 'qq') %}selected{% endif %}>Qualquer</option>
+                        <option value="iga" {% if (parametros.tnome is defined) and (parametros.tnome == 'iga') %}selected{% endif %}>Igual a</option>
+                        <option value="ct" {% if (parametros.tnome is defined) and (parametros.tnome == 'ct') %}selected{% endif %}>Contém</option>
+                        <option value="nct" {% if (parametros.tnome is defined) and (parametros.tnome == 'nct') %}selected{% endif %}>Não contém</option>
                     </select>
-                    <input type="text" class="span6" id="inome" name="nome" placeholder="Nome" value="{{ parametros.nome }}">
+                    <input type="text" class="span6" id="inome" name="nome" placeholder="Nome"
+                           value="{% if parametros.nome is defined %}{{ parametros.nome }}{% endif %}">
                 </div>
             </div>
 
             <div class="control-group">
                 <label class="control-label" for="idesc">Descrição:</label>
                 <div class="controls">
-                    <select name="tdesc" class="span2">
-                        <option value="qualquer" {% if parametros.tdesc == 'qualquer' %}selected{% endif %}>Qualquer</option>
-                        <option value="iguala" {% if parametros.tdesc == 'iguala' %}selected{% endif %}>Igual a</option>
-                        <option value="contem" {% if parametros.tdesc == 'contem' %}selected{% endif %}>Contém</option>
-                        <option value="naocontem" {% if parametros.tdesc == 'naocontem' %}selected{% endif %}>Não contém</option>
+                    <select id="itdesc" name="tdesc" class="span2" onchange="mudouCriterio('itdesc', 'idesc')">
+                        <option value="qq" {% if (parametros.tdes is defined) and (parametros.tdes == 'qq') %}selected{% endif %}>Qualquer</option>
+                        <option value="iga" {% if (parametros.tdes is defined) and (parametros.tdes == 'iga') %}selected{% endif %}>Igual a</option>
+                        <option value="ct" {% if (parametros.tdes is defined) and (parametros.tdes == 'ct') %}selected{% endif %}>Contém</option>
+                        <option value="nct" {% if (parametros.tdes is defined) and (parametros.tdes == 'nct') %}selected{% endif %}>Não contém</option>
                     </select>
-                    <input type="text" class="span6" id="idesc" name="desc" placeholder="Descrição" value="{{ parametros.desc }}">
+                    <input type="text" class="span6" id="idesc" name="desc" placeholder="Descrição"
+                           value="{% if parametros.desc is defined %}{{ parametros.desc }}{% endif %}">
                     <div class="pull-right">
-                        <button type="submit" name="submit" value="1" title="Buscar produtos com os critérios selecionados" class="btn btn-info">Buscar</button>
+                        <button type="submit" title="Buscar produtos com os critérios selecionados" class="btn btn-info">Buscar</button>
                         <a href="{{ path('produtos') }}" title="Limpa consulta" class="btn btn-primary">Limpar</a>
                     </div>
                 </div>
@@ -67,26 +71,26 @@
 
         <hr>
 
-        <table class="table table-bordered table-hover">
+        <table id="tabela_produtos" class="tablesorter table table-bordered table-hover">
 
-            <thead>
-                <tr style="background: #F5F5F5">
-                    <th>Id</th>
-                    <th>Nome</th>
-                    <th>Descrição</th>
-                    <th>Valor</th>
-                    <th>Opções</th>
+            <thead id="hcabecalho">
+                <tr>
+                    <th id="hid">Id</th>
+                    <th id="hnome">Nome</th>
+                    <th id="hdesc">Descrição</th>
+                    <th id="hvalor">Valor</th>
+                    <th id="hopcoes">Opções</th>
                 </tr>
             </thead>
 
             <tbody>
                 {% for produto in produtos %}
                     <tr>
-                        <td>{{ produto.id }}</td>
-                        <td>{{ produto.nome }}</td>
-                        <td>{{ produto.descricao }}</td>
-                        <td>{{ produto.valor }}</td>
-                        <td>
+                        <td style="vertical-align: middle;">{{ produto.id }}</td>
+                        <td style="vertical-align: middle;">{{ produto.nome }}</td>
+                        <td style="vertical-align: middle;">{{ produto.descricao }}</td>
+                        <td style="vertical-align: middle; text-align: right;">{{ produto.valor }}</td>
+                        <td style="vertical-align: middle; text-align: center">
                             <a href='/produtos/edit/{{ produto.id }}' title="Editar"><i class="icon-edit"></i></a>
                             &nbsp;&nbsp;
                             <a href='/produtos/delete/{{ produto.id }}' title="Excluir"><i class="icon-trash"></i></a>
@@ -97,4 +101,36 @@
             </tbody>
 
         </table>
+
+        <div class="text-info pull-left">
+            {{ paginador.legenda }}
+        </div>
+
+        <div class="pagination pagination-right">
+            {{ paginador.opcoes | raw }}
+        </div>
+
+        <script type="text/javascript">
+            $(document).ready(function()
+                    {
+                        $("#tabela_produtos").tablesorter({
+                            // pass the headers argument and assing a object
+                            headers: {
+                                // assign the secound column (we start counting zero)
+                                4: {
+                                    // disable it by setting the property sorter to false
+                                    sorter: false
+                                }
+                            }
+                        });
+                    }
+            );
+
+            function mudouCriterio(criterio, valor) {
+                if(document.getElementById(criterio).value == 'qq') {
+                    document.getElementById(valor).value = '';
+                }
+            }
+        </script>
+
 {% endblock %}
